--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MSM</title>
+    <title>Статистика корпорации</title>
     <style>
         body {
             margin: 0;
@@ -29,15 +29,25 @@
         }
         
         .sol-value {
-            color: #14F195; /* Зеленый цвет для SOL, как в Solana */
+            color: #f114cc; /* Зеленый цвет для SOL, как в Solana */
             font-weight: bold;
+        }
+        
+        .dollar-amount {
+            font-weight: bold;
+            font-size: 31px;
+            color: #8e14f1; /* Золотистый цвет для долларов */
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="total-amount">
-            ТОТАЛ ВЫВЕДЕНО КОРПОРАЦИЕЙ: <span class="sol-value">536 SOL</span>
+            ТОТАЛ ВЫВЕДЕНО КОРПОРАЦИЕЙ: <span class="sol-value">534 SOL</span>
+        </div>
+        <div class="dollar-amount">
+            80100$
         </div>
     </div>
 </body>
