--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
     <div class="container">
         <div class="total-amount">
-            In total, our corporation earned:: <span class="sol-value">534 SOL</span>
+            In total, our corporation earned: <span class="sol-value">534 SOL</span>
         </div>
         <div class="dollar-amount">
             80100$
